@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2004/04/19 21:53:06 xtraeme Exp $
+# $NetBSD: Makefile,v 1.5 2004/07/30 11:24:38 xtraeme Exp $
 #
 
-DISTNAME=	XFree86-dirs-1.0
+DISTNAME=	XFree86-dirs-1.1
 CATEGORIES=	misc
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -20,6 +20,7 @@ USE_PKGINSTALL=		yes
 WRKSRC=			${WRKDIR}
 
 XFREE86_ONLY_DIRS=	# defined
+.include "../../meta-pkgs/XFree86/Makefile.common"
 .include "../../mk/bsd.prefs.mk"
 .include "dirs.mk"
 
