@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6731 2004/07/30 05:23:37 minskim Exp $
+$NetBSD: CHANGES,v 1.6732 2004/07/30 11:24:38 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3646,3 +3646,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated uvscan to 4.24.1 [wiz 2004-07-29]
 	Added m1-0.7.4c [wiz 2004-07-29]
 	Updated alee-ttf to 0.4 [minskim 2004-07-30]
+	Updated XFree86-dirs to 1.1 [xtraeme 2004-07-30]
+	Updated xorg-dirs to 1.1 [xtraeme 2004-07-30]
